<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distributed_mapper</name>
  <version>1.0.0</version>
  <description>Lidar Odometry</description>
  <maintainer email="zhongshp5@mail2.sysu.edu.cn">Shipeng Zhong</maintainer>
  <license>TODO</license>
  <author>Shipeng Zhong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>libgtsam-dev</depend>
  <depend>libboost-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
