<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libnabo</name>
  <version>1.1.2</version>
  <description>libnabo</description>
  <maintainer email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</maintainer>
  <license>BSD</license>
  <author>Stéphane Magnenat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
