<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>total_launch</name>
  <version>0.0.0</version>
  <description>Unified launch system for drone - integrates DCL-SLAM and drone control systems</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>dcl_slam</depend>
  <depend>dcl_fast_lio</depend>
  <depend>uart_to_stm32</depend>
  <depend>pid_control_pkg</depend>
  <depend>activity_control_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
